# crashcart-ng

./: .gitignore  COMPARISON.md  CONTAINERIZED_APPROACH.md  Cargo.toml  GETTING_STARTED.md  Makefile  README.md  build-image-containerized.sh  build-image-robust.sh  build-image-static.sh  build-image.sh  build.sh
examples/: test-container.sh
src/: container.rs  image.rs  lib.rs  main.rs  mount.rs  namespace.rs
tests/: integration_tests.rs
