[package]
name = "crashcart"
version = "0.2.0"
edition = "2021"
authors = ["Modern Crashcart Contributors"]
description = "A modern container debugging tool that sideloads debugging utilities into running containers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/modern-crashcart"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.27", features = ["process", "mount", "fs", "sched", "user"] }
libc = "0.2"
glob = "0.3"
which = "4.4"

[profile.release]
lto = true
panic = 'abort'
strip = true